# NeuroFrame

./: .gitignore  CMakeLists.txt  README.md  packages.txt  pyproject.toml  setup.py
cmake/: FindCUDNN.cmake
src/: CMakeLists.txt
src/backend/: utils.h
src/backend/cpu/: CMakeLists.txt  batch_norm.cc  batch_norm.h  broadcast.cc  broadcast.h  convolution.cc  convolution.h  cross_entropy_loss.cc  cross_entropy_loss.h  matmul.cc  matmul.h  misc.cc  misc.h  pool.cc  pool.h  relu.cc  relu.h  sigmoid.cc  sigmoid.h  tensor_binary_op.cc  tensor_binary_op.h  tensor_eq.cc  tensor_eq.h  tensor_reduction_op.cc  tensor_reduction_op.h  tensor_scalar_op.cc  tensor_scalar_op.h  tensor_unary_op.cc  tensor_unary_op.h  transpose.cc  transpose.h  utils.h
src/backend/cuda/: CMakeLists.txt  batch_norm.cu  batch_norm.h  broadcast.cu  broadcast.h  convolution.cu  convolution.h  cross_entropy_loss.cu  cross_entropy_loss.h  cudnn_utils.cu  cudnn_utils.h  matmul.cu  matmul.h  misc.cu  misc.h  pool.cu  pool.h  reduction.cuh  relu.cu  relu.h  sigmoid.cu  sigmoid.h  tensor_binary_op.cu  tensor_binary_op.h  tensor_eq.cu  tensor_eq.h  tensor_reduction_op.cu  tensor_reduction_op.h  tensor_scalar_op.cu  tensor_scalar_op.h  tensor_unary_op.cu  tensor_unary_op.h  transpose.cu  transpose.h  utils.h
src/basic/: CMakeLists.txt  device.cc  device.h  inference_mode.cc  inference_mode.h  log.cc  log.h  mem.cc  mem.h  random.cc  random.h  scalar.cc  scalar.h
src/basic/mem_pool/: abstract_mem_pool.cc  abstract_mem_pool.h  cpu_mem_pool.cc  cpu_mem_pool.h  cuda_mem_pool.cc  cuda_mem_pool.h  mem_pool.cc  mem_pool.h
src/cgraph/: CMakeLists.txt  cgraph.cc  cgraph.h  cgraph_edge.cc  cgraph_edge.h  cgraph_node.cc  cgraph_node.h
src/example/: CMakeLists.txt  flops_test.py  hw1.cc  hw2.cc  hw3.py  mnist-training.py  op.cc  pytorch-mnist-ref.py  sgd-example.py  tensor.cc
src/example/hw5/: test_task1_backward.py  test_task1_forward.py  test_task2_auto_diff.py  test_task2_topo_sort.py
src/example/mnist-conv/: jittor-ref.py  mnist-training.py  pytorch-ref.py
src/example/mnist-mlp/: jittor-mnist-ref.py
src/example/resnet/: .gitignore  lib.py  neuroframe-imagenet.py
src/op/: CMakeLists.txt  batch_norm.cc  batch_norm.h  broadcast.cc  broadcast.h  convolution.cc  convolution.h  cross_entropy_loss.cc  cross_entropy_loss.h  matmul.cc  matmul.h  misc.cc  misc.h  op.cc  op.h  op_context.cc  op_context.h  op_utils.cc  op_utils.h  pool.cc  pool.h  relu.cc  relu.h  reshape.cc  reshape.h  sigmoid.cc  sigmoid.h  tensor_binary_op.cc  tensor_binary_op.h  tensor_copy.cc  tensor_copy.h  tensor_eq.cc  tensor_eq.h  tensor_reduction_op.cc  tensor_reduction_op.h  tensor_scalar_op.cc  tensor_scalar_op.h  tensor_unary_op.cc  tensor_unary_op.h  transpose.cc  (+1 more)
src/optim/: CMakeLists.txt  adam.cc  adam.h  optim.cc  optim.h  optim_state.h  sgd.cc  sgd.h
src/pybind/: CMakeLists.txt  basic.cc  basic.h  cgraph.cc  cgraph.h  misc.cc  misc.h  ops.cc  ops.h  optim.cc  optim.h  pybind.cc  tensor.cc  tensor.h
src/tensor/: CMakeLists.txt  tensor.cc  tensor.h
src/unittest/: CMakeLists.txt  utils.h
src/unittest/op/: CMakeLists.txt  activations.cc  binary_ops.cc  convolution.cc  cross_entropy_loss.cc  matmul.cc  pool.cc  scalar_ops.cc  transpose.cc  unary_ops.cc
src/utils/: cuda_utils.h  utils.h
